
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-02-27 DP         Change '<localpipe>' to 'local socket' [Peter Eisentraut]
2006-02-22 DP         Tidy up dlgServer, per Peter Eisentraut.
2006-02-22 DP         Split src/Makefile.am into one fragment per sub directory
                      for ease of maintenance.
2006-02-22 DP         Allow the admin modules to be built with PGXS if required
                      [August Zajonc]
2006-02-21 MH         Reject invalid command line options in pgAgent
2006-02-21 MH         Minimal linking for pgAgent under *nix
2006-02-21 DP  1.4.2  Fix a typo in the admin pack README [August Zajonc]
2006-02-19 AP  1.4.2  Fix serial column detection for 8.1 per Kris Jurka
2006-02-19 AP         Display column dependencies
2006-02-19 AP         Rearrange "view data" position in toolbar/menu
2006-02-19 AP         Revert "Allow SELECT inside xact.." to have messages back
2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
2006-02-08 DP  1.4.2  Re-arrange the Win32 dependencies so that iconv, libxml2
                      and wxwidgets are located in $PGADIR/../pgadmin3-deps/
2006-02-08 MH  1.6.0  Add a 'Favourites' query organiser to the Query Tool.
                      Note; this adds a dependecy on libxml2 (and iconv).
2006-02-06 DP  1.4.2  Properly enable the redo button in the Query Tool when
                      appropriate, per PromoTrade
2006-02-06 DP  1.6.0  Allow selection and copy of subsets of the columns and 
                      rows in the Edit Grid [Edward Di Geronimo Jr]
2006-02-06 DP  1.6.0  Cleanup if the query tool leaves a transaction in an 