@@ -11,6 +11,7 @@
 
 // wxWindows headers
 #include <wx/wx.h>
+#include <wx/clipbrd.h>
 
 #include "pgConn.h"
 #include "ctl/ctlSQLResult.h"
@@ -20,10 +21,19 @@
 
 
 ctlSQLResult::ctlSQLResult(wxWindow *parent, pgConn *_conn, wxWindowID id, const wxPoint& pos, const wxSize& size)
-: wxListView(parent, id, pos, size, wxLC_REPORT | wxSUNKEN_BORDER)
+: wxGrid(parent, id, pos, size, wxWANTS_CHARS|wxVSCROLL|wxHSCROLL)
 {
     conn=_conn;
     thread=0;
+    CreateGrid(0, 0);
+    EnableEditing(false);
+    SetSizer(new wxBoxSizer(wxVERTICAL));
+
+    wxFont fntLabel(settings->GetSystemFont());
+    fntLabel.SetWeight(wxBOLD);
+    SetLabelFont(fntLabel);
+
+    Connect(wxID_ANY, wxEVT_GRID_RANGE_SELECT, wxGridRangeSelectEventHandler(ctlSQLResult::OnGridSelect));
 }
 
 
@@ -39,12 +49,6 @@ void ctlSQLResult::SetConnection(pgConn *_conn)
     conn=_conn;
 }
 
-
-void ctlSQLResult::SelectAll()
-{
-	for (int i = 0; i < GetItemCount(); i++)
-		Select(i);
-}
 
 bool ctlSQLResult::Export()
 {
@@ -66,23 +70,46 @@ bool ctlSQLResult::Export()
 
 wxString ctlSQLResult::GetExportLine(int row)
 {
-    if (GetColumnCount() <= 1)
+    return GetExportLine(row, 0, GetNumberCols() - 1);
+}
+
+wxString ctlSQLResult::GetExportLine(int row, int col1, int col2)
+{
+    wxArrayInt cols;
+    wxString str;
+    int i;
+
+    if (col2 < col1)
+        return str;
+
+    cols.Alloc(col2 - col1 + 1);
+    for (i = col1; i <= col2; i++) {
+        cols.Add(i);
+    }
+
+    return GetExportLine(row, cols);
+}
+
+
+wxString ctlSQLResult::GetExportLine(int row, wxArrayInt cols)
+{
+    if (GetNumberCols() <= 1)
         return GetItemText(row);
 
     wxString str;
-    int col;
-    for (col=1 ; col < GetColumnCount() ; col++)
+    unsigned int col;
+    for (col=0 ; col < cols.Count() ; col++)
     {
-        if (col > 1)
+        if (col > 0)
             str.Append(settings->GetCopyColSeparator());
 
-        wxString text=GetItemText(row, col);
+        wxString text = GetCellValue(row, cols[col]);
 
 		bool needQuote  = false;
 		if (settings->GetCopyQuoting() == 1)
 		{
 			/* Quote strings only */
-			switch (colTypClasses.Item(col))
+			switch (colTypClasses.Item(cols[col]))
 			{
 			case PGTYPCLASS_NUMERIC:
 			case PGTYPCLASS_BOOL:
@@ -112,20 +139,27 @@ int ctlSQLResult::Execute(const wxString &query, int resultToRetrieve)
 
     colSizes.Empty();
     colHeaders.Empty();
+    int num;
+
+#if 0
+    /* Seems pointless to me... */
     int i;
-    wxListItem item;
-    item.SetMask(wxLIST_MASK_TEXT|wxLIST_MASK_WIDTH);
-
-    for (i=0 ; i < GetColumnCount() ; i++)
+    for (i=0 ; i < GetNumberCols() ; i++)
     {
-        GetColumn(i, item);
-        colHeaders.Add(item.GetText());
-        colSizes.Add(item.GetWidth());
+        colHeaders.Add(GetColLabelValue(i));
+        colSizes.Add(GetColSize(i));
     }
+#endif
 
-    ClearAll();
+    num = GetNumberRows();
+    if (num)
+        DeleteRows(0, num);
+    num = GetNumberCols();
+    if (num)
+        DeleteCols(0, num);
 
     rowsRetrieved=0;
+    maxRows = 0;
     colNames.Empty();
     colTypes.Empty();
     colTypClasses.Empty();
@@ -165,22 +199,17 @@ int ctlSQLResult::RetrieveOne()
 
     if (!rowsRetrieved)
     {
-        int w, h;
-        if (colSizes.GetCount() == 1)
-            w = colSizes.Item(0);
-        else
-            GetSize(&w, &h);
-
         colNames.Add(thread->DataSet()->ColName(0));
         colTypes.Add(wxT(""));
         colTypClasses.Add(0L);
 
 
-        InsertColumn(0, thread->DataSet()->ColName(0), wxLIST_FORMAT_LEFT, w);
+        SetColLabelValue(0, thread->DataSet()->ColName(0));
+        SetColLabelAlignment(wxALIGN_LEFT, wxALIGN_CENTER);
 
         while (!thread->DataSet()->Eof())
         {
-            InsertItem(rowsRetrieved, thread->DataSet()->GetVal(0));
+            SetCellValue(rowsRetrieved, 0, thread->DataSet()->GetVal(0));
             rowsRetrieved++;
             thread->DataSet()->MoveNext();
         }
@@ -207,8 +236,16 @@ int ctlSQLResult::Retrieve(long chunk)
         colTypClasses.Add(0L);
 
         Freeze();
-        InsertColumn(0, _("Row"), wxLIST_FORMAT_RIGHT, 30);
-        colNames.Add(wxT("Row"));
+        
+        if (!GetTable()) {
+            SetTable(new sqlResultTable(), true);
+        }
+        GetTable()->AppendCols(nCols);
+        SetColLabelAlignment(wxALIGN_LEFT, wxALIGN_CENTER);
+        if (maxRows)
+            GetTable()->AppendRows(maxRows);
+        else
+            GetTable()->AppendRows(NumRows());
 
         size_t hdrIndex=0;
 
@@ -220,7 +257,7 @@ int ctlSQLResult::Retrieve(long chunk)
             colTypes.Add(colType);
             colTypClasses.Add(thread->DataSet()->ColTypClass(col));
 
-            wxString colHeader=colName +wxT(" (")+ colType +wxT(")");
+            wxString colHeader = colName + wxT("\n") + colType;
 
             int w;
             if (hdrIndex < colHeaders.GetCount() && colHeaders.Item(hdrIndex) == colHeader)
@@ -236,7 +273,8 @@ int ctlSQLResult::Retrieve(long chunk)
                     w=-1;
             }
 
-            InsertColumn(col+1, colHeader, wxLIST_FORMAT_LEFT, w);
+            SetColLabelValue(col, colHeader);
+            SetColSize(col, w);
         }
         Thaw();
     }
@@ -246,8 +284,6 @@ int ctlSQLResult::Retrieve(long chunk)
 
     while (chunk-- && !thread->DataSet()->Eof())
     {
-        InsertItem(rowsRetrieved, NumToStr(rowsRetrieved+1L));
-
         for (col=0 ; col < nCols ; col++)
         {
             wxString value = thread->DataSet()->GetVal(col);
@@ -256,7 +292,7 @@ int ctlSQLResult::Retrieve(long chunk)
                 if ((int)value.Length() > maxColSize)
                     value = value.Left(maxColSize) + wxT(" (..)");
             }
-            SetItem(rowsRetrieved, col+1, value);
+            GetTable()->SetValue(rowsRetrieved, col, value);
         }
         
         thread->DataSet()->MoveNext();
@@ -272,14 +308,9 @@ int ctlSQLResult::Retrieve(long chunk)
 wxString ctlSQLResult::GetItemText(int row, int col)
 {
     if (col < 0)
-        return wxListCtrl::GetItemText(row);
-
-    wxListItem item;
-    item.m_mask=wxLIST_MASK_TEXT;
-    item.m_itemId=row;
-    item.m_col=col;
-    GetItem(item);
-    return item.GetText();
+        return GetExportLine(row);
+    else
+        return GetCellValue(row, col);
 }
 
 
@@ -334,3 +365,173 @@ int ctlSQLResult::RunStatus()
 }
 
 
+void ctlSQLResult::Copy()
+{
+    wxString str;
+    int copied = 0;
+    size_t i;
+
+    if (GetSelectedRows().GetCount()) {
+        wxArrayInt rows = GetSelectedRows();
+
+        for (i=0 ; i < rows.GetCount() ; i++)
+        {
+            str.Append(GetExportLine(rows.Item(i)));
+    
+            if (rows.GetCount() > 1)
+                str.Append(END_OF_LINE);
+        }
+
+        copied = rows.GetCount();
+    }
+    else if (GetSelectedCols().GetCount()) {
+        wxArrayInt cols = GetSelectedCols();
+        size_t numRows = GetNumberRows();
+
+        for (i=0 ; i < numRows ; i++)
+        {
+            str.Append(GetExportLine(i, cols));
+    
+            if (numRows > 1)
+                str.Append(END_OF_LINE);
+        }
+
+        copied = numRows;
+    }
+    else if (GetSelectionBlockTopLeft().GetCount() > 0 &&
+        GetSelectionBlockBottomRight().GetCount() > 0) {
+        unsigned int x1, x2, y1, y2;
+
+        x1 = GetSelectionBlockTopLeft()[0].GetCol();
+        x2 = GetSelectionBlockBottomRight()[0].GetCol();
+        y1 = GetSelectionBlockTopLeft()[0].GetRow();
+        y2 = GetSelectionBlockBottomRight()[0].GetRow();
+
+        for (i = y1; i <= y2; i++) {
+            str.Append(GetExportLine(i, x1, x2));
+
+            if (y2 > y1)
+                str.Append(END_OF_LINE);
+        }
+
+        copied = y2 - y1 + 1;
+    }
+    else {
+        int row, col;
+
+        row = GetGridCursorRow();
+        col = GetGridCursorCol();
+
+        str.Append(GetExportLine(row, col, col));
+        copied = 1;
+    }
+
+    if (copied && wxTheClipboard->Open())
+    {
+        wxTheClipboard->SetData(new wxTextDataObject(str));
+        wxTheClipboard->Close();
+    }
+}
+
+void ctlSQLResult::SetMaxRows(int rows)
+{
+    maxRows = rows;
+}
+
+void ctlSQLResult::ResultsFinished()
+{
+    int rows = GetTable()->GetNumberRows();
+
+    if (rowsRetrieved < rows) {
+        GetTable()->DeleteRows(rowsRetrieved, rows - rowsRetrieved);
+    }
+}
+
+void ctlSQLResult::OnGridSelect(wxGridRangeSelectEvent& event)
+{
+    SetFocus();
+}
+
+sqlResultTable::sqlResultTable()
+{
+    nRows = nCols = 0;
+    values = 0;
+}
+
+sqlResultTable::~sqlResultTable()
+{
+    values.Clear();
+}
+
+int sqlResultTable::GetNumberRows()
+{
+    return nRows;
+}
+
+int sqlResultTable::GetNumberCols()
+{
+    return nCols;
+}
+
+bool sqlResultTable::AppendCols(size_t numCols)
+{
+    if (values.Count()) {
+        values.Clear();
+        nRows = 0;
+    }
+
+    nCols = numCols;
+    return true;
+}
+
+bool sqlResultTable::AppendRows(size_t numRows)
+{
+    if (numRows <= 0)
+        return false;
+
+    values.Add(wxT(""), nCols * numRows);
+    nRows += numRows;
+    return true;
+}
+
+void sqlResultTable::SetValue(int row, int col, const wxString& s)
+{
+    if (row < 0 || row >= nRows)
+        return;
+
+    if (col < 0 || col >= nCols)
+        return;
+
+    values[row * nCols + col] = s;
+}
+
+wxString sqlResultTable::GetValue(int row, int col)
+{
+    if (row < 0 || row >= nRows)
+        return wxT("");
+
+    if (col < 0 || col >= nCols)
+        return wxT("");
+
+    return values[row * nCols + col];
+}
+
+bool sqlResultTable::IsEmptyCell(int row, int col)
+{
+    return false;
+}
+
+bool sqlResultTable::DeleteRows(size_t pos, size_t numRows)
+{
+    if (pos >= (size_t)nRows)
+        return false;
+
+    values.RemoveAt(pos, numRows);
+
+    if (pos + numRows > (size_t)nRows)
+        nRows = pos;
+    else
+        nRows -= numRows;
+
+    return true;
+}
