@@ -13,7 +13,7 @@
 #define CTLSQLRESULT_H
 
 // wxWindows headers
-#include <wx/listctrl.h>
+#include <wx/grid.h>
 #include <wx/thread.h>
 
 #include "pgSet.h"
@@ -24,7 +24,7 @@
 
 #define CTLSQL_RUNNING 100  // must be greater than ExecStatusType PGRES_xxx values
 
-class ctlSQLResult : public wxListView 
+class ctlSQLResult : public wxGrid
 {
 public:
     ctlSQLResult(wxWindow *parent, pgConn *conn, wxWindowID id, const wxPoint& pos=wxDefaultPosition, const wxSize& size=wxDefaultSize);
@@ -41,17 +41,23 @@ public:
     int RetrieveOne();
     int Abort();
 
-	void SelectAll();
-
     bool Export();
     bool CanExport() { return rowsRetrieved>0 && colNames.GetCount() > 0; }
 
     wxString GetItemText(int row, int col=-1);
     wxString GetExportLine(int row);
+    wxString GetExportLine(int row, wxArrayInt cols);
+    wxString GetExportLine(int row, int col1, int col2);
+    void Copy();
 
     int RunStatus();
     wxString GetMessagesAndClear();
     wxString GetErrorMessage();
+
+    void SetMaxRows(int rows);
+    void ResultsFinished();
+
+    void OnGridSelect(wxGridRangeSelectEvent& event);
 
     wxArrayString colNames;
     wxArrayString colTypes;
@@ -64,6 +70,27 @@ private:
     pgQueryThread *thread;
     pgConn *conn;
     long rowsRetrieved;
+    int maxRows;
+};
+
+class sqlResultTable : public wxGridTableBase
+{
+public:
+    sqlResultTable();
+    ~sqlResultTable();
+    int GetNumberRows();
+    int GetNumberCols();
+    bool AppendCols(size_t numCols); // NOTE: Replaces cols rather than appends
+    bool AppendRows(size_t numRows);
+    void SetValue(int row, int col, const wxString& s);
+    wxString GetValue(int row, int col);
+    bool IsEmptyCell(int row, int col);
+    bool DeleteRows(size_t pos = 0, size_t numRows = 1);
+
+private:
+    int nRows;
+    int nCols;
+    wxArrayString values;
 };
 
 #endif
