@@ -35,6 +35,12 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-27 DP         Replace the query tool's wxListView control with a
+                      wxGrid and a virtual table to hold the data during 
+                      loading for significant speedup. [Edward Di Geronimo Jr]
+2006-02-27 DP         Enhance the query tool to allow copy/paste of arbitrary
+                      groups of columns, rows or individual cells.
+                      [Edward Di Geronimo Jr]
 2006-02-27 DP         Change '<localpipe>' to 'local socket' [Peter Eisentraut]
 2006-02-22 DP         Tidy up dlgServer, per Peter Eisentraut.
 2006-02-22 DP         Split src/Makefile.am into one fragment per sub directory
